--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@
 	#body {
 		width:942px;
 		height:650px;
-		background-image:url(img/photos/vineArchWhite.jpg);
+		background-image: url(img/photos/vineArchWhite.jpg);
 		border-left: 4px  solid #959595;
 		border-right: 4px  solid #959595;
 		}
@@ -188,33 +188,48 @@
 			inset 2px 2px 4px rgba(0, 0, 0, 0.3);
 	}
 	
-	.neu-btn-blue{
-		border: none;
-		cursor: pointer;
-		width: 110px;
-		height:30px;
-		display:inline-block;
-		translation: all;
-		translation-duration: 250ms;
-		align-items: center;
-		justify-content: center;
-		font-size: 16px;
-		padding: 0;
-		margin: 0;
-		
-		background:#070476; /*same as background*/
-		color: #ffffff;
-		
-		border-radius: 9999px;
-		box-shadow: -5px -5px 10px rgba(41, 33, 141, 0.8),
-			5px 5px 10px rgba(0, 0, 0, 0.45);
+	.icons-wrapper{
+		position: fixed;
+		right: 0px; 
+		bottom: 0px;
+		margin-right: 25px;
 	}
 	
-	.neu-btn-blue:hover{
-		box-shadow: -1px -1px 5px rgba(41, 33, 141, 0.6),
-			1px 1px 5px rgba(0, 0, 0, 0.5),
-			inset -2px -2px 5px rgba(41, 33, 141, 1),
-			inset 2px 2px 4px rgba(0, 0, 0, 0.5);
+	.icon{
+		display: inline-block;
+		font-size: 44px;
+		height: 35px;
+		width: 35px;
+		animation: float 5s ease-in-out infinite;
+	}
+	
+	.ri-facebook-circle-line{
+		animation-delay: 0s;
+	}
+	
+	.ri-instagram-line{
+		animation-delay: 1s;
+	}
+	
+	.ri-youtube-line{
+		animation-delay: 2s;
+	}
+	
+	img {
+		max-width: 100%;
+		max-height: 100%;
+	}
+	
+	@keyframes float{
+		0%{
+			transform: translateY(0);
+		}
+		50%{
+			transform: translateY(-15px);
+		}
+		100%{
+			transform: translateY(0);
+		}
 	}
 	
 	
