--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 		body {
-			background-image: url(img/photos/vineScean.jpg);
-			background-attachment: fixed;
-			background-repeat: no-repeat;
+			background-color: white;
 			/* Set rules to fill background */
 			min-height: 100%;
 			min-width: 1024px;
@@ -11,6 +9,13 @@
 			height: auto;
 				 
 		}	
+		@media(min-width:1200px){
+			body{
+			background-image: url(img/photos/vineScean.jpg);
+			background-attachment: fixed;
+			background-repeat: no-repeat;
+			}
+		}
 	   
 	#container {
 		width:950px;
